--- a/frontend-vue3-boilerplate/vue3-boilerplate-deployment.yaml
+++ b/frontend-vue3-boilerplate/vue3-boilerplate-deployment.yaml
@@ -50,4 +50,4 @@ spec:
         ports:
         - containerPort:  80
           name:  vue3-boilerplate
-      restartPolicy: always
+      restartPolicy: Always
