vue3-boilerplate-svc nodeport

--- a/frontend-vue3-boilerplate/vue3-boilerplate-svc.yaml
+++ b/frontend-vue3-boilerplate/vue3-boilerplate-svc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     app: vue3-boilerplate
-  type: ClusterIP
+  type: NodePort
   sessionAffinity: None
   sessionAffinityConfig:
     clientIP:
