--- a/ingress-tarin/tekton.yaml
+++ b/ingress-tarin/tekton.yaml
@@ -3,26 +3,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: argocd
-  name: argocd-server-ingress
+  namespace: tekton-pipelines
+  name: tekton-server-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
-    nginx.ingress.kubernetes.io/affinity: "cookie"
 spec:
   ingressClassName: nginx
   rules:
-  - host: argocd.internal.app
+  - host: tekton.internal.localapp
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: argocd-server
+            name: tekton-dashboard
             port:
-              number: 80
+              number: 9097
